test/Fail/Issue2862.err
Issue2862.agda:13.3-14.13: error: [DefinitionInDifferentModule]
Definition in different module than its type signature
when scope checking the declaration
  data N where
    zero : N
